# sa2-discord-rich-presence

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/sa2_discord_rich_presence/: asset_name.h  chao.h  character.h  clipboard.h  discord_rich_presence.h  events.h  free_cam.h  ini_settings.h  level.h  level_timer.h  menu.h  modding.h  player.h  timer.h
resources/SA2ModManager_mod/: configschema.xml  mod.ini
resources/discord_rich_presence_art_assets/large_image_assets/events/: Info.txt  crop_from_1080p.bat
resources/discord_rich_presence_art_assets/large_image_assets/levels/: Info.txt
resources/discord_rich_presence_art_assets/large_image_assets/other/: Info.txt
resources/discord_rich_presence_art_assets/small_image_assets/characters/: Info.txt
resources/discord_rich_presence_art_assets/small_image_assets/characters/svg/: svgo cmd.txt  svgo.config.js  webp_to_png.bat
resources/discord_rich_presence_art_assets/small_image_assets/misc/: Info.txt
src/: asset_name.cpp  chao.cpp  character.cpp  clipboard.cpp  discord_rich_presence.cpp  events.cpp  free_cam.cpp  ini_settings.cpp  level.cpp  level_timer.cpp  main.cpp  menu.cpp  modding.cpp  player.cpp
